<resources>

    <string name="app_name">Walkitive Recorder</string>

    <string name="login_input_username_hint">Username</string>
    <string name="login_input_password_hint">Password</string>
    <string name="login_input_button_text">Login</string>
    <string name="walkitive">WALKITIVE</string>
    <string name="recorder">RECORDER</string>

    <string name="current_location_indicator">You are here</string>
    <string name="recentre_map_to_current_location">recentre map to current location</string>
    <string name="spot_name_hint">Name</string>
    <string name="spot_description_hint">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
