<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_screen_background_color"
    tools:context=".controllers.WelcomeScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/logo_and_app_title_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/walkitive_recorder_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/walkitive_recorder_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/app_title_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/century_gothic"
                android:text="@string/walkitive"
                android:textColor="@color/walkitive_recorder_text_color"
                android:textSize="@dimen/app_title_first_name_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/walkitive_recorder_logo" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/app_title_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/century_gothic"
                android:text="@string/recorder"
                android:textColor="@color/walkitive_recorder_text_color"
                android:textSize="@dimen/app_title_last_name_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_title_first_name" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/login_fields_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_and_app_title_container"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="38dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_input_username"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:background="@drawable/login_input_text_border"
                android:fontFamily="@font/helvetica"
                android:hint="@string/login_input_username_hint"
                android:inputType="text"
                android:paddingStart="11dp"
                android:textColorHint="@color/login_input_hint_text_color"
                android:textSize="@dimen/login_text_font_size" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/login_input_text_border"
                android:fontFamily="@font/helvetica"
                android:hint="@string/login_input_password_hint"
                android:inputType="textPassword"
                android:paddingStart="11dp"
                android:paddingTop="0dp"
                android:textColorHint="@color/login_input_hint_text_color"
                android:textSize="@dimen/login_text_font_size"
                app:layout_constraintTop_toBottomOf="@+id/login_input_username" />

            <Button
                android:id="@+id/login_send_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/login_send_button_border"
                android:gravity="center_horizontal"
                android:paddingTop="2dp"
                android:text="@string/login_input_button_text"
                android:textAllCaps="false"
                android:textColor="@color/login_send_button_text_color"
                android:textSize="@dimen/login_text_font_size"
                app:layout_constraintTop_toBottomOf="@+id/login_input_password" />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>